fix: width issue on narrow screen

--- a/styles/main.css
+++ b/styles/main.css
@@ -428,10 +428,10 @@ svg {
 
 @media only screen and (max-width: 520px){ 
     .card{ 
-        width: 20%;
+        width: 47%;
     }
     .card video{ 
-        height: 155px;
+        height: 145px;
     }
 }
  
